--- a/SampleApp/res/values/strings.xml
+++ b/SampleApp/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="userName">User Name</string>
     <string name="passwordBox">Password</string>
     <string name="loginButton">Sign In</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
